# allways

./: .gitignore  Cargo.toml  README.md  pyproject.toml  tox.ini
.github/workflows/: integration.yml  test.yml
example/: after.txt  before.txt
src/: add_all.rs  lib.rs  main.rs  name_parser.rs
